--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@
 
 body
 {
-	height: 100vh;
-	/* background-color: #f2f2f2; */
+	/* height: 100vh; */
+	background-color: #f2f2f2;
 	background: transparent;
 	font-family: 'Roboto', sans-serif;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 }
 
 
@@ -19,13 +19,17 @@ header
 {
 	/* background: rgb(2,0,36);
 	background: linear-gradient(45deg, rgb(38, 7, 75) 10%, rgb(37, 37, 149) 60% , rgb(1, 17, 61) 100%); */
-	background-color: #032435;
-	height: 7vh;
+	background: #032435;
+	height: 9vh;
 	font-weight: 500;
 }
-header .nav-link
+ .nav-link
 {
+	color: rgb(24, 24, 24) !important;
+	font-weight: 400;
+	font-size: 1.3em;
 	color: white !important;
+	margin-right: 3px;
 }
 @media screen and (max-width:765px) {
 	header #navbarSupportedContent
@@ -40,10 +44,11 @@ header .nav-link
 }
 
 
-header .nav-link:hover
+ .nav-link:hover
 {
-	transition: 0.3s;
-	color: #ddd1d1 !important;
+	transition: 0.5s;
+	color: #eeeaea !important;
+	border-bottom: 2px solid rgb(244, 240, 240);
 }
 .user-icon
 {
@@ -83,19 +88,26 @@ header .navbar-toggler:focus
 }
 
 .form{
-	background-color: #efefef5f !important;
-	color: white !important;
-	backdrop-filter: blur(30px);
-	box-shadow: 0px 0px 6px  #0000005f;
+	/* background-color: #efefef5f !important; */
+	/* color: white !important; */
+	/* backdrop-filter: blur(30px); */
+	/* box-shadow: 0px 0px 6px  #0000005f; */
 	z-index: 2;
-	border-radius: 10px;
+	/* border-radius: 10px; */
+	border: none !important;
 	::placeholder{
-		color: #353434;
+		color: #a09d9d;
 	}
+
+	
 }
-.form::placeholder::after{
-	background: transparent;
-	content-visibility: none;
+
+
+.form input {
+	border: none;
+	border-radius: 0px;
+	border-bottom: 1px solid rgb(143, 140, 140);
+
 }
 
 .form-control{
@@ -203,4 +215,7 @@ header .navbar-toggler:focus
 .img1{
 	filter: invert();
 	/* filter: grayscale(); */
+}
+.footer{
+	background-color: #032435;
 }
