--- a/views/home/mission.ejs
+++ b/views/home/mission.ejs
@@ -1,3 +1,9 @@
+<div class="row" style="background-image: url(https://annamrita.org/wp-content/uploads/2021/12/our-goals-desktop.png); background-repeat: round; height: 80vh;">
+	<div class="col-10 m-auto justify-content-evenly ">
+		<h1 class="text-light" style="font: 3.0em sans-serif;">Walking Towards A Nourished <br /> Tomorrow</h1>
+	</div>
+</div>
+
 <h1 class="m-4 color-theme">Our Mission</h1>
 	
 <div class="bg-white m-4 p-4 shadow">
