--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -1,6 +1,7 @@
 <div id="carousel" class="carousel slide" data-bs-ride="carousel">
 	<div class="carousel-indicators">
-		<button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		<button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
+			aria-label="Slide 1"></button>
 		<button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		<button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
 	</div>
@@ -15,14 +16,20 @@
 			<img src="/assets/images/img-3.jpg" class="d-block w-100" alt="...">
 		</div>
 	</div>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carousel"
-		data-bs-slide="prev">
+	<button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
 		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		<span class="visually-hidden">Previous</span>
 	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carousel"
-		data-bs-slide="next">
+	<button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
 		<span class="carousel-control-next-icon" aria-hidden="true"></span>
 		<span class="visually-hidden">Next</span>
 	</button>
+</div>
+<div class="row my-5 justify-content-evenly">
+	<div class="col-xxl-5"><img width="622" height="426" src="https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png" class="attachment-full size-full" alt="" decoding="async" srcset="https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png 622w, https://annamrita.org/wp-content/uploads/2022/07/battle-imgg-300x205.png 300w" ></div>
+	<div class="col-xxl-5 m-2"><h1 class="text-center mb-3">Our battle against hunger is humanity's war for equality</h1>
+	<h5 class="text-secondary ps-3">A country cannot progress if most of its people are hungry. Today, 14% of our population is undernourished and needs our undivided attention. The only way to ensure a healthy and happy country is by nourishing the ones who need it the most. Annamrita Foundation is an NGO working with an aim to provide food-relief and nourishment to the underprivileged communities of India.
+		At Annamrita, we exchange ‘Hunger for Hope’.
+		<br /><br />
+		Your charity in the form of generous donations can help Annamrita provide nutritious mid-day meals and food-relief to the children and underprivileged sections of our society.</h5></div>
 </div>
