--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -5,13 +5,13 @@
     <title><%= title %></title>
   </head>
   <body>
-    <h2>Forgot Password</h2>
+    <div class="w-50 m-auto my-3 p-5 border round bg-light" >
+    <h2 class="text-center">Forgot Password</h2>
     <form id="forgotPasswordForm">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      <button type="submit">Submit</button>
+      <input type="email" class="form-control" id="email" placeholder="Enter Your Email" name="email" required>
+      <button type="submit" class="btn btn-primary my-3 d-block m-auto" >Submit</button>
     </form>
-  
+    </div>
     <script>
       document.getElementById('forgotPasswordForm').addEventListener('submit', async function (event) {
         event.preventDefault();
