--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,5 +1,9 @@
-<div class="m-0 pt-5 w-100 bg-img-1">
-	<form action="/auth/signup" method="POST" class="form w-50 bg-white p-5 m-auto" style="min-width: 450px;" onsubmit="return validatePassword()">
+<div class="row">
+	<div class="col m-auto">
+		<img src="/assets/images/imagefood.jpg" class="card-img-top" alt="..." height="100%" width="30em">
+	</div>
+<div class="col m-0 pt-5 w-100 mx-5">
+	<form action="/auth/signup" method="POST" class="form w-100 bg-white p-5" style="min-width: 450px;" onsubmit="return validatePassword()">
 		<h3 class="text-center mb-3">User Signup</h3>
 
 		<% if (typeof errors != 'undefined') { %>
@@ -47,13 +51,14 @@
 			<input type="password" name="securityKey" class="form-control" id="securityKey" placeholder="Enter security key">
 		</div>
 
-		<button type="submit" class="btn btn-primary d-block m-auto mt-4">Signup</button>
+		<button type="submit" class="btn btn-primary w-100 d-block m-auto mt-4 rounded-pill">Signup</button>
 
 		<div class="mt-3">
 			<span>Already have an account?</span>
 			<a href="/auth/login">Login here</a>
 		</div>
 	</form>
+</div>
 </div>
 
 <script>
