--- a/views/home/aboutUs.ejs
+++ b/views/home/aboutUs.ejs
@@ -1,3 +1,9 @@
+<div class="row " style="background-image: url(https://annamrita.org/wp-content/uploads/2021/11/About-banner.png); background-repeat: round; height: 70vh;">
+	<div class="col-10 m-auto justify-content-evenly">
+		<h1 class="text-light" style="font: 3.0em sans-serif;">Nourishing The Dream Of <br />A Hunger-Free India</h1>
+	</div>
+</div>
+
 <h1 class="m-4 color-theme">About us</h1>
 	
 <div class="bg-white m-4 p-4 shadow">
