--- a/views/home/contactUs.ejs
+++ b/views/home/contactUs.ejs
@@ -1,4 +1,10 @@
-    <h1 class="m-4 color-theme text-center">Contact Us</h1>
+<div class="row" style="background-image: url(https://annamrita.org/wp-content/uploads/2021/12/our-proces-desktop.png); height: 75vh; background-repeat: round;">
+    <div class="col-10 m-auto justify-content-evenly">
+    <h1 class="text-light " style="font: 4.5em sans-serif;">Let's Start<br />
+        A Conversation</h1></div>
+</div>
+
+<h1 class="m-4 color-theme text-center">Contact Us</h1>
     <div class="row">
         <div class="col-lg">
             <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="w-50 bg-white p-5 m-auto" style="min-width: 500px;">
