--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -1,35 +1,86 @@
 <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-	<div class="carousel-indicators">
-		<button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
-			aria-label="Slide 1"></button>
-		<button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		<button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-	</div>
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="/assets/images/img-1.jpg" class="d-block w-100" alt="...">
-		</div>
-		<div class="carousel-item">
-			<img src="/assets/images/img-2.jpg" class="d-block w-100" alt="...">
-		</div>
-		<div class="carousel-item">
-			<img src="/assets/images/img-3.jpg" class="d-block w-100" alt="...">
-		</div>
-	</div>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		<span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		<span class="visually-hidden">Next</span>
-	</button>
+  <div class="carousel-indicators">
+    <button
+      type="button"
+      data-bs-target="#carousel"
+      data-bs-slide-to="0"
+      class="active"
+      aria-current="true"
+      aria-label="Slide 1"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carousel"
+      data-bs-slide-to="1"
+      aria-label="Slide 2"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carousel"
+      data-bs-slide-to="2"
+      aria-label="Slide 3"
+    ></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/assets/images/img-1.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/img-2.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/img-3.jpg" class="d-block w-100" alt="..." />
+    </div>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carousel"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carousel"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 <div class="row my-5 justify-content-evenly">
-	<div class="col-xxl-5"><img width="622" height="426" src="https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png" class="attachment-full size-full" alt="" decoding="async" srcset="https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png 622w, https://annamrita.org/wp-content/uploads/2022/07/battle-imgg-300x205.png 300w" ></div>
-	<div class="col-xxl-5 m-2"><h1 class="text-center mb-3">Our battle against hunger is humanity's war for equality</h1>
-	<h5 class="text-secondary ps-3">A country cannot progress if most of its people are hungry. Today, 14% of our population is undernourished and needs our undivided attention. The only way to ensure a healthy and happy country is by nourishing the ones who need it the most. Annamrita Foundation is an NGO working with an aim to provide food-relief and nourishment to the underprivileged communities of India.
-		At Annamrita, we exchange ‘Hunger for Hope’.
-		<br /><br />
-		Your charity in the form of generous donations can help Annamrita provide nutritious mid-day meals and food-relief to the children and underprivileged sections of our society.</h5></div>
+  <div class="col-5">
+    <img
+      width="622"
+      height="426"
+      src="https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png"
+      class="attachment-full size-full"
+      alt=""
+      decoding="async"
+      srcset="
+        https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png         622w,
+        https://annamrita.org/wp-content/uploads/2022/07/battle-imgg-300x205.png 300w
+      "
+    />
+  </div>
+  <div class="col-5 m-2">
+    <h1 class="text-center mb-3">
+      Our battle against hunger is humanity's war for equality
+    </h1>
+    <h5 class="text-secondary ps-3">
+      In a world of abundant resources, the persistence of hunger is a stark
+      reminder of the inequalities that plague our global society. Hunger is not
+      merely a lack of food; it is a symptom of deeper social, economic, and
+      political disparities. To fight hunger is to fight for a more equitable
+      world where everyone has the opportunity to live a healthy and dignified
+      life. In this battle, we are all soldiers. Governments, non-profits,
+      businesses, and individuals must come together in a concerted effort to
+      ensure that no one is left behind. By uniting in this common cause, we can
+      make significant strides towards ending hunger and achieving true equality
+      for all.
+    </h5>
+  </div>
 </div>
