--- a/views/home/contactUs.ejs
+++ b/views/home/contactUs.ejs
@@ -7,7 +7,7 @@
 <h1 class="m-4 color-theme text-center">Contact Us</h1>
     <div class="row">
         <div class="col-lg">
-            <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="w-50 bg-white p-5 m-auto" style="min-width: 500px;">
+            <form id="contact-form" action="/home/contact-us/submit" method="POST" class="w-50 bg-white p-5 m-auto" style="min-width: 500px;">
                 <div>
                     <input type="hidden" name="access_key" value="3a08b6db-f737-4f64-b39d-a0284e51238a">
                 </div>
@@ -46,7 +46,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
         document.getElementById('contact-form').addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent the default form submission
 
@@ -68,4 +68,4 @@
                 alert('There was an error submitting the form.');
             });
         });
-    </script>
+    </script> -->
