--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -4,8 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
   </head>
-  <body>
-    <div class="w-50 m-auto my-3 p-5 border round bg-light" >
+  <body style="min-height: calc(100vh - 50px);
+	background: url(/assets/images/img-2.jpg) no-repeat center;
+	background-size: cover;
+	background-attachment: fixed;">
+    
+    <div class="w-50 m-auto my-5 p-5 border rounded-2" style="background-color: rgba(255, 255, 255, 0.675);" >
     <h2 class="text-center">Forgot Password</h2>
     <form id="forgotPasswordForm">
       <input type="email" class="form-control" id="email" placeholder="Enter Your Email" name="email" required>
