--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-8 m-auto"><img src="/assets/images/imglogin.jpg" alt="" height="100%" width="100%"></div>
 <div class="col m-auto w-100">
-	<form action="/auth/login" method="POST" class="form w-50 bg-white" style="min-width: 450px; background-color: transparent;">
+	<form action="/auth/login" method="POST" class="form w-50 bg-white" style="min-width: 450px; background-color: white;">
 		<h3 class="text-center mb-3">User Login</h3>
 		<div class="mb-3">
 			<!-- <label for="email" class="form-label">Email address</label> -->
