--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -5,16 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reset Password</title>
 </head>
-<body>
-  <h2>Reset Password</h2>
-  <form id="resetPasswordForm">
+<body><div class="bg-img-2 row m-auto justify-content-center py-5">
+  <div class="col-5 text-center my-5" >
+  <form id="resetPasswordForm" style="background-color: rgba(255, 255, 255, 0.748); border-radius: 5px;">
+  <h2 class="text-center mb-3 mt-5">Reset Password</h2>
+  
     <input type="hidden" id="token" name="token">
     <label for="newPassword">New Password:</label>
     <input type="password" id="newPassword" name="newPassword" required>
     <div class="form-text text-danger" id="passwordError" style="display: none;">Password must contain at least one letter, one number, and one "@" character.</div>
-    <button type="submit">Reset Password</button>
+    <br />
+    <button type="submit " class=" my-3 btn btn-primary">Reset Password</button>
   </form>
-
+</div>
+</div>
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const token = urlParams.get('token');
