--- a/views/auth/verify-otp.ejs
+++ b/views/auth/verify-otp.ejs
@@ -6,7 +6,7 @@
 <body>
 	<div class="m-0 pt-5 w-100 bg-img-1">
 	<div class="row justify-content-center">
-		<div class="col-4 form p-5">
+		<div class="col-lg-6 p-5 rounded-2" style="background-color: #efefefac;">
 			<h1 class="text-center">Verify OTP</h1>
 	<% if (error && error.length > 0) { %>
 		<div>
