--- a/views/home/contactUs.ejs
+++ b/views/home/contactUs.ejs
@@ -39,7 +39,7 @@
                     <li>XYZ Nagar, Delhi</li>
                     <li>XYZ Vihar, Noida</li>
                 </ul>
-                <li>You can also email your suggestions and feedback at <mark>Nourish@gmail.com</mark></li>
+                <li>You can also email your suggestions and feedback at <mark>nourish54321@gmail.com</mark></li>
             </ul>
         </div>
     </div>
