--- a/views/agent/profile.ejs
+++ b/views/agent/profile.ejs
@@ -37,11 +37,11 @@
             <div class="mb-4">
                 <label for="phone" class="form-label">Phone</label>
                 <input type="tel" name="agent[phone]" class="form-control" id="phone" placeholder="Enter phone with country code.." pattern="\+\d{1,3}\d{10}" title="Please enter a valid phone number with country code" value="<%= currentUser.phone %>" required>
-                <button type="button" id="sendOtpButton">Send OTP</button>
+                <button type="button" id="sendOtpButton" class="btn-outline-primary rounded-2 m-2">Send OTP</button>
             </div>
             <div class="mb-4">
                 <input type="text" id="otp" placeholder="Enter OTP" class="form-control">
-                <button type="button" id="verifyOtpButton">Verify OTP</button>
+                <button type="button" id="verifyOtpButton" class="btn-outline-primary rounded-2 m-2">Verify OTP</button>
             </div>
             <button type="submit" class="btn btn-primary w-75 d-block m-auto mt-4">Update</button>
         </form>
