--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -51,22 +51,16 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<div class="row my-5 justify-content-evenly">
-  <div class="col-5">
+<div class="row my-5 px-5 justify-content-center">
+  <div class="col">
     <img
-      width="622"
-      height="426"
-      src="https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png"
-      class="attachment-full size-full"
+      src="/assets/images/image.png"
       alt=""
-      decoding="async"
-      srcset="
-        https://annamrita.org/wp-content/uploads/2022/07/battle-imgg.png         622w,
-        https://annamrita.org/wp-content/uploads/2022/07/battle-imgg-300x205.png 300w
-      "
+      height="85%"
+      style="border-radius: 20px;"
     />
   </div>
-  <div class="col-5 m-2">
+  <div class="col">
     <h1 class="text-center mb-3">
       Our battle against hunger is humanity's war for equality
     </h1>
